--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -2,10 +2,12 @@
 @use '/src/styles/mediaqueries' as mq;
 
 @mixin container-centered-variables {
-  --section-spacing-h: var(--spacing-4);
-  --section-spacing-v-small: var(--spacing-12);
-  --section-spacing-v-medium: var(--spacing-16);
-  --section-spacing-v-large: var(--spacing-24);
+  & {
+    --section-spacing-h: var(--spacing-4);
+    --section-spacing-v-small: var(--spacing-12);
+    --section-spacing-v-medium: var(--spacing-16);
+    --section-spacing-v-large: var(--spacing-24);
+  }
 
   @include mq.breakpoint($from: sm) {
     --section-spacing-h: var(--spacing-8);
@@ -183,13 +185,15 @@
 }
 
 @mixin heading-variables {
-  --heading-color: var(--color-gray-900);
-  --heading-1-font-size: var(--text-4xl);
-  --heading-2-font-size: var(--text-3xl);
-  --heading-3-font-size: var(--text-2xl);
-  --heading-4-font-size: var(--text-xl);
-  --heading-5-font-size: var(--text-l);
-  --heading-6-font-size: var(--text-base);
+  & {
+    --heading-color: var(--color-gray-900);
+    --heading-1-font-size: var(--text-4xl);
+    --heading-2-font-size: var(--text-3xl);
+    --heading-3-font-size: var(--text-2xl);
+    --heading-4-font-size: var(--text-xl);
+    --heading-5-font-size: var(--text-l);
+    --heading-6-font-size: var(--text-base);
+  }
 
   @include mq.color-scheme-dark {
     --heading-color: var(--color-white);
@@ -259,8 +263,10 @@
 }
 
 @mixin link-variables {
-  --link-color: var(--color-blue-600);
-  --link-color-hover: var(--color-blue-800);
+  & {
+    --link-color: var(--color-blue-600);
+    --link-color-hover: var(--color-blue-800);
+  }
 
   @include mq.color-scheme-dark {
     --link-color: var(--color-blue-500);
